; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macsonic.c_macsonic_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_macsonic.c_macsonic_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @macsonic_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macsonic_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* %6, align 8
  %8 = call i32 @local_irq_save(i64 %7)
  %9 = load i32, i32* %3, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @sonic_interrupt(i32 %9, i8* %10)
  store i32 %11, i32* %5, align 4
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @local_irq_restore(i64 %12)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @sonic_interrupt(i32, i8*) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
